--- a/conf/local.ini
+++ b/conf/local.ini
@@ -6,7 +6,8 @@ allowed_methods=GET,PUT,POST,DELETE,OPTIONS
 [mysql]
 host=localhost
 database=apidb
-user
+user=devops
+password=devops1234
 
 [logging]
 level=DEBUG
