--- a/conf/live.ini
+++ b/conf/live.ini
@@ -3,7 +3,7 @@ allowed_origins=http://localhost:8000,http://127.0.0.1:8000
 allowed_headers=Content-Type
 allowed_methods=GET,PUT,POST,DELETE,OPTIONS
 
-[postgres]
+[mysql]
 host=ec2-54-204-20-164.compute-1.amazonaws.com
 database=d21i3duaek02cf
 user=gnkjdapmwwdsrq
